--- a/index.html
+++ b/index.html
@@ -326,8 +326,6 @@
 						  <th scope="col">#</th>
 						  <th scope="col">Calcio integrato</th>
 						  <th scope="col">Basket integrato</th>
-						  <th scope="col">Basket senior</th>
-						  <th scope="col">Mini basket</th>
 						</tr>
 					  </thead>
 					  <tbody>
@@ -343,12 +341,6 @@
 							Piazza della Resistenza / Monterotondo
 							giovedì ore 18.30-19.30
 						  </td>
-						  <td>
-							PALESTRA ISTITUTO CATULLO
-							via tirso 19 / Monterotondo
-							Lunedì e Mercoledì 20.30 - 23.00
-						  </td>
-						  <td>Luogo e orario da definire</td>
 						</tr>
 						<tr>
 						  <th scope="row">2</th>
@@ -362,8 +354,6 @@
 							Via Monviso snc / Monterotondo
 							Sabato ore 9.00-10.00
 						  </td>
-						  <td></td>
-						  <td></td>
 						</tr>
 						<tr>
 						  <th scope="row">3</th>
@@ -372,8 +362,6 @@
 							Monterotondo Scalo 
 							Sabato ore 10.00-11.00
 						  </td>
-						  <td></td>
-						  <td></td>
 						  <td></td>
 						</tr>
 						<tr>
@@ -384,8 +372,24 @@
 							Giovedì ore 19.30-20.30
 						  </td>
 						  <td></td>
-						  <td></td>
-						  <td></td>
+						</tr>
+					  </tbody>
+					  <thead>
+						<tr>
+						  <th scope="col">#</th>
+						  <th scope="col">Basket senior</th>
+						  <th scope="col">Mini basket</th>
+						</tr>
+					  </thead>
+					  <tbody>
+						<tr>
+						  <th scope="row">1</th>
+						  <td>
+							PALESTRA ISTITUTO CATULLO
+							via tirso 19 / Monterotondo
+							Lunedì e Mercoledì 20.30 - 23.00
+						  </td>
+						  <td>Luogo e orario da definire</td>
 						</tr>
 					  </tbody>
 					</table>
