--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
 	            </div>
 	            <div class="row">
 	            <div class="col section-1 section-description wow fadeIn">
-						<h3>Per bambini/e e ragazzi/e compresa tra i 5 e i 30 anni</h3>
-	                </div>
+						<h2>Per bambini/e e ragazzi/e compresa tra i 5 e i 30 anni</h2>
+	            </div>
 	            </div>
 	            <div class="row">
                 	<div class="col-md-4 section-1-box wow fadeInUp">
@@ -317,6 +317,11 @@
 	                    	</div>
 	                    </div>
                     </div>
+	            </div>
+	            <div class="row">
+	            <div class="col section-1 section-description wow fadeIn">
+						<h2>Luoghi e orari attività</h2>
+	            </div>
 	            </div>
 	            <div class="row">
 					<div class="table-responsive">
