on modal close, pause videos

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 						
 					</div>
 					<div class="modal-footer">
-						<button type="button" onclick="document.querySelectorAll('video').forEach(vid => vid.pause());" class="btn btn-secondary" data-dismiss="modal">Chiudi</button>
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Chiudi</button>
 					</div>
 				</div>
 			</div>
