--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 	            </div>
 	            </div>
 	            <div class="row">
-					<div class="table-responsive">
+					<!--<div class="table-responsive">
 					<table class="table">
 					  <thead>
 						<tr>
@@ -398,7 +398,8 @@
 						</tr>
 					  </tbody>
 					</table>
-					</div>
+					</div>-->
+					<img alt="Orari Integra" src="assets/img/orari-integra.jpeg" onclick="window.open('assets/img/orari-integra.jpeg', '_blank');"/>
 				</div>
 	        </div>
         </div>
