--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
 	            </div>
 	            </div>
 	            <div class="row">
+				<div class="col section-1 wow fadeInUp">
 					<!--<div class="table-responsive">
 					<table class="table">
 					  <thead>
@@ -400,6 +401,7 @@
 					</table>
 					</div>-->
 					<img alt="Orari Integra" src="assets/img/orari-integra.jpeg" onclick="window.open('assets/img/orari-integra.jpeg', '_blank');"/>
+				</div>
 				</div>
 	        </div>
         </div>
