--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
         <title>Integra Sport ONLUS</title>
 		<meta name="description" content="L'Associazione INTEGRA SPORT 2013 ASD ONLUS si avvale della collaborazione di strutture del territorio romano per l'attivazione di corsi di CALCIO - BASKET rivolti a persone con e senza disabilità">
         <!-- CSS -->
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600">
+        <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">-->
+        <link rel="stylesheet" href="assets/css/Open+Sans.css">
+        <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+        <!--<link rel="stylesheet" href="assets/css/all.css">-->
         <link rel="stylesheet" href="assets/css/animate.css">
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="assets/css/media-queries.css">
@@ -125,7 +128,7 @@
 		                </div>
 		                <!-- Third row of images -->
 	            		<div class="row">
-		                    <div class="col-md-4 gallery-box wow fadeInUp">
+		                    <div class="col-md-4 gallery-box wow fadeInDown">
 		                    	<div data-toggle="modal" data-target="#myModal">
 			                		<img src="assets/img/gallery/DSC02108.JPG" alt="Image 5" data-target="#myCarousel" data-slide-to="6">
 			                	</div>
@@ -135,7 +138,7 @@
 			                		<img src="assets/img/gallery/video3.png" alt="Video 3" data-target="#myCarousel" data-slide-to="7">
 			                	</div>
 		                    </div>
-		                    <div class="col-md-4 gallery-box wow fadeInUp">
+		                    <div class="col-md-4 gallery-box wow fadeInDown">
 		                    	<div data-toggle="modal" data-target="#myModal">
 			                		<img src="assets/img/gallery/DSC00425 copia.JPG" alt="Image 6" data-target="#myCarousel" data-slide-to="8">
 			                	</div>
@@ -148,7 +151,7 @@
 			                		<img src="assets/img/gallery/DSC01093.JPG" alt="Image 7" data-target="#myCarousel" data-slide-to="9">
 			                	</div>
 		                    </div>
-		                    <div class="col-md-4 gallery-box wow fadeInUp">
+		                    <div class="col-md-4 gallery-box wow fadeInDown">
 		                    	<div data-toggle="modal" data-target="#myModal">
 			                		<img src="assets/img/gallery/7.jpg" alt="Image 8" data-target="#myCarousel" data-slide-to="10">
 			                	</div>
@@ -275,14 +278,14 @@
 	            </div>
 	            <div class="row">
 	            <div class="col section-1 section-description wow fadeIn">
-						<h3>Per bambini/e e ragazzi/e compresa tra i 5 e i 30 anni</h3>
+						<h3>Per bambini/e e ragazzi/e compresi tra i 5 e i 30 anni</h3>
 	            </div>
 	            </div>
 	            <div class="row">
                 	<div class="col-md-4 section-1-box wow fadeInUp">
                 		<div class="row">
                 			<div class="col-md-4">
-			                	<div style="width: 80px; height: 80px; background: url(./assets/ico/calcioebasket.png) center no-repeat; background-size: 80px;">        
+			                	<div style="width: 80px; height: 80px; background: url(./assets/ico/calcioebasket.png) center no-repeat; background-size: 90px;">        
 			                	</div>
 		                	</div>
 	                		<div class="col-md-8">
@@ -294,7 +297,7 @@
                     <div class="col-md-4 section-1-box wow fadeInDown">
 	                	<div class="row">
                 			<div class="col-md-4">
-			                	<div style="width: 80px; height: 80px; background: url(./assets/ico/minibasket.png) center no-repeat; background-size: 50px;">
+			                	<div style="width: 80px; height: 80px; background: url(./assets/ico/minibasket.png) center no-repeat; background-size: 55px;">
 			                	</div>
 		                	</div>
 	                		<div class="col-md-8">
@@ -458,11 +461,13 @@ Il nostro team è costituito da istruttori Iusm, psicologi, terapisti della neur
 	            </div>
 	            
 	            <div class="row">
-	                <div class="col-md-6 section-3-box wow fadeInLeft">
+	                <div class="col-md-6 section-3-box wow fadeInUp">
 	                	<div class="row">
 	                		<div class="col-md-3">
 	                			<div class="section-3-box-icon">
-	                				<i class="fas fa-paperclip"></i>
+	                				<i class="fas"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-paperclip" viewBox="0 0 16 16">
+									  <path d="M4.5 3a2.5 2.5 0 0 1 5 0v9a1.5 1.5 0 0 1-3 0V5a.5.5 0 0 1 1 0v7a.5.5 0 0 0 1 0V3a1.5 1.5 0 1 0-3 0v9a2.5 2.5 0 0 0 5 0V5a.5.5 0 0 1 1 0v7a3.5 3.5 0 1 1-7 0V3z"/>
+									</svg></i>
 	                			</div>
 	                		</div>
 	                		<div class="col-md-9">
@@ -471,12 +476,14 @@ Il nostro team è costituito da istruttori Iusm, psicologi, terapisti della neur
 	                		</div>
 	                	</div>
 	                </div>
-	                <div class="col-md-6 section-3-box wow fadeInLeft">
+	                <div class="col-md-6 section-3-box wow fadeInUp">
 	                	<div class="row">
 	                		<div class="col-md-3">
 	                			<div class="section-3-box-icon">
 	                				<div class="section-3-box-icon">
-										<i class="fas fa-paperclip"></i>
+										<i class="fas"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-paperclip" viewBox="0 0 16 16">
+										  <path d="M4.5 3a2.5 2.5 0 0 1 5 0v9a1.5 1.5 0 0 1-3 0V5a.5.5 0 0 1 1 0v7a.5.5 0 0 0 1 0V3a1.5 1.5 0 1 0-3 0v9a2.5 2.5 0 0 0 5 0V5a.5.5 0 0 1 1 0v7a3.5 3.5 0 1 1-7 0V3z"/>
+										</svg></i>
 									</div>
 	                			</div>
 	                		</div>
@@ -489,7 +496,7 @@ Il nostro team è costituito da istruttori Iusm, psicologi, terapisti della neur
 	            </div>
 	            
 	            <div class="row">
-	                <div class="col-md-6 section-3-box wow fadeInLeft">
+	                <div class="col-md-6 section-3-box wow fadeInDown">
 	                	<div class="row">
 	                		<div class="col-md-3">
 	                			<div class="section-3-box-icon">
@@ -507,7 +514,7 @@ Il nostro team è costituito da istruttori Iusm, psicologi, terapisti della neur
 	                		</div>
 	                	</div>
 	                </div>
-	                <div class="col-md-6 section-3-box wow fadeInLeft">
+	                <div class="col-md-6 section-3-box wow fadeInDown">
 	                	<div class="row">
 	                		<div class="col-md-3">
 	                			<div class="section-3-box-icon">
@@ -580,8 +587,10 @@ Il nostro team è costituito da istruttori Iusm, psicologi, terapisti della neur
         <!-- Javascript -->
 		<script src="assets/js/jquery-3.5.1.min.js"></script>
 		<script src="assets/js/jquery-migrate-3.3.0.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+		<!--<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>-->
+        <script src="assets/js/popper.min.js"></script>
+        <script src="assets/js/bootstrap.min.js"></script>
         <script src="assets/js/jquery.backstretch.min.js"></script>
         <script src="assets/js/wow.min.js"></script>
         <script src="assets/js/waypoints.min.js"></script>
