--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         <title>Integra Sport ONLUS</title>
 		<meta name="description" content="L'Associazione INTEGRA SPORT 2013 ASD ONLUS si avvale della collaborazione di strutture del territorio romano per l'attivazione di corsi di CALCIO - BASKET rivolti a persone con e senza disabilità">
         <!-- CSS -->
-        <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600" font-display="swap">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">-->
+        <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/css/Open+Sans.css">
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-        <!--<link rel="stylesheet" href="assets/css/all.css">-->
+        <link rel="stylesheet" href="assets/css/all.css">-->
         <link rel="stylesheet" href="assets/css/animate.css">
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="assets/css/media-queries.css">
@@ -26,6 +26,7 @@
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
         <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
+        <link rel="preload" as="image" href="https://integrasportonlus.github.io/assets/img/backgrounds/integra-modified.jpg">
         
     </head>
 
@@ -94,17 +95,17 @@
 	            		<div class="row">
 	            			<div class="col-md-4 gallery-box wow fadeInDown">
 	            				<div data-toggle="modal" data-target="#myModal">
-		                			<img src="assets/img/gallery/DSC00819.JPG" alt="Image 1" data-target="#myCarousel" data-slide-to="0">
+		                			<img src="assets/img/gallery/DSC00819.JPG" alt="Image 1" data-target="#myCarousel" data-slide-to="0" loading="lazy">
 		                		</div>
 		                    </div>
 		                    <div class="col-md-4 gallery-box wow fadeInUp">
 		                    	<div data-toggle="modal" data-target="#myModal">
-			                		<img src="assets/img/gallery/video1.png" alt="Video 1" data-target="#myCarousel" data-slide-to="1">
+			                		<img src="assets/img/gallery/video1.png" alt="Video 1" data-target="#myCarousel" data-slide-to="1" loading="lazy">
 			                	</div>
 		                    </div>
 		                    <div class="col-md-4 gallery-box wow fadeInDown">
 		                    	<div data-toggle="modal" data-target="#myModal">
-			                		<img src="assets/img/gallery/DSC00961.JPG" alt="Image 2" data-target="#myCarousel" data-slide-to="2">
+			                		<img src="assets/img/gallery/DSC00961.JPG" alt="Image 2" data-target="#myCarousel" data-slide-to="2" loading="lazy">
 			                	</div>
 		                    </div>
 	            		</div>
@@ -112,17 +113,17 @@
 	            		<div class="row">
 	            			<div class="col-md-4 gallery-box wow fadeInUp">
 	            				<div data-toggle="modal" data-target="#myModal">
-		                			<img src="assets/img/gallery/video2.png" alt="Video 2" data-target="#myCarousel" data-slide-to="3">
+		                			<img src="assets/img/gallery/video2.png" alt="Video 2" data-target="#myCarousel" data-slide-to="3" loading="lazy">
 		                		</div>
 		                    </div>
 		                    <div class="col-md-4 gallery-box wow fadeInDown">
 		                    	<div data-toggle="modal" data-target="#myModal">
-			                		<img src="assets/img/gallery/DSC01170.JPG" alt="Image 3" data-target="#myCarousel" data-slide-to="4">
+			                		<img src="assets/img/gallery/DSC01170.JPG" alt="Image 3" data-target="#myCarousel" data-slide-to="4" loading="lazy">
 			                	</div>
 		                    </div>
 		                    <div class="col-md-4 gallery-box wow fadeInUp">
 		                    	<div data-toggle="modal" data-target="#myModal">
-			                		<img src="assets/img/gallery/DSC01800.JPG" alt="Image 4" data-target="#myCarousel" data-slide-to="5">
+			                		<img src="assets/img/gallery/DSC01800.JPG" alt="Image 4" data-target="#myCarousel" data-slide-to="5" loading="lazy">
 			                	</div>
 		                    </div>
 		                </div>
@@ -130,17 +131,17 @@
 	            		<div class="row">
 		                    <div class="col-md-4 gallery-box wow fadeInDown">
 		                    	<div data-toggle="modal" data-target="#myModal">
-			                		<img src="assets/img/gallery/DSC02108.JPG" alt="Image 5" data-target="#myCarousel" data-slide-to="6">
+			                		<img src="assets/img/gallery/DSC02108.JPG" alt="Image 5" data-target="#myCarousel" data-slide-to="6" loading="lazy">
 			                	</div>
 		                    </div>
 		                    <div class="col-md-4 gallery-box wow fadeInUp">
 		                    	<div data-toggle="modal" data-target="#myModal">
-			                		<img src="assets/img/gallery/video3.png" alt="Video 3" data-target="#myCarousel" data-slide-to="7">
+			                		<img src="assets/img/gallery/video3.png" alt="Video 3" data-target="#myCarousel" data-slide-to="7" loading="lazy">
 			                	</div>
 		                    </div>
 		                    <div class="col-md-4 gallery-box wow fadeInDown">
 		                    	<div data-toggle="modal" data-target="#myModal">
-			                		<img src="assets/img/gallery/DSC00425 copia.JPG" alt="Image 6" data-target="#myCarousel" data-slide-to="8">
+			                		<img src="assets/img/gallery/DSC00425 copia.JPG" alt="Image 6" data-target="#myCarousel" data-slide-to="8" loading="lazy">
 			                	</div>
 		                    </div>
 		                </div>
@@ -148,17 +149,17 @@
 	            		<div class="row">
 		                    <div class="col-md-4 gallery-box wow fadeInUp">
 		                    	<div data-toggle="modal" data-target="#myModal">
-			                		<img src="assets/img/gallery/DSC01093.JPG" alt="Image 7" data-target="#myCarousel" data-slide-to="9">
+			                		<img src="assets/img/gallery/DSC01093.JPG" alt="Image 7" data-target="#myCarousel" data-slide-to="9" loading="lazy">
 			                	</div>
 		                    </div>
 		                    <div class="col-md-4 gallery-box wow fadeInDown">
 		                    	<div data-toggle="modal" data-target="#myModal">
-			                		<img src="assets/img/gallery/7.jpg" alt="Image 8" data-target="#myCarousel" data-slide-to="10">
+			                		<img src="assets/img/gallery/7.jpg" alt="Image 8" data-target="#myCarousel" data-slide-to="10" loading="lazy">
 			                	</div>
 		                    </div>
 		                    <div class="col-md-4 gallery-box wow fadeInUp">
 		                    	<div data-toggle="modal" data-target="#myModal">
-			                		<img src="assets/img/gallery/IMG20220528133719.jpg" alt="Image 9" data-target="#myCarousel" data-slide-to="11">
+			                		<img src="assets/img/gallery/IMG20220528133719.jpg" alt="Image 9" data-target="#myCarousel" data-slide-to="11" loading="lazy">
 			                	</div>
 		                    </div>
 	            		</div>
@@ -403,7 +404,7 @@
 					  </tbody>
 					</table>
 					</div>-->
-					<img alt="Orari Integra" src="assets/img/orari-integra.jpeg" onclick="window.open('assets/img/orari-integra.jpeg', '_blank');"/>
+					<img alt="Orari Integra" src="assets/img/orari-integra.jpeg" onclick="window.open('assets/img/orari-integra.jpeg', '_blank');" loading="lazy"/>
 				</div>
 				</div>
 	        </div>
@@ -509,7 +510,7 @@ Il nostro team è costituito da istruttori Iusm, psicologi, terapisti della neur
 	                		<div class="col-md-9">
 	                			<h3>Prima convenzione tesserati integra:</h3>
 		                    	<a download="prima_convenzione_tesserati_integra.jpg" href="assets/img/gallery/IMG-20220820-WA0021.jpg" title="Prima convenzione">
-									<img alt="Prima convenzione" src="assets/img/gallery/IMG-20220820-WA0021.jpg">
+									<img alt="Prima convenzione" src="assets/img/gallery/IMG-20220820-WA0021.jpg" loading="lazy">
 								</a>
 	                		</div>
 	                	</div>
@@ -527,7 +528,7 @@ Il nostro team è costituito da istruttori Iusm, psicologi, terapisti della neur
 	                		<div class="col-md-9">
 	                			<h3>Seconda convenzione tesserati integra:</h3>
 		                    	<a download="seconda_convenzione_tesserati_integra.jpg" href="assets/img/gallery/IMG-20220820-WA0020.jpg" title="Seconda convenzione">
-									<img alt="Seconda convenzione" src="assets/img/gallery/IMG-20220820-WA0020.jpg">
+									<img alt="Seconda convenzione" src="assets/img/gallery/IMG-20220820-WA0020.jpg" loading="lazy">
 								</a>
 	                		</div>
 	                	</div>
@@ -585,16 +586,16 @@ Il nostro team è costituito da istruttori Iusm, psicologi, terapisti della neur
         </footer>
 
         <!-- Javascript -->
-		<script src="assets/js/jquery-3.5.1.min.js"></script>
-		<script src="assets/js/jquery-migrate-3.3.0.min.js"></script>
-		<!--<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>-->
-        <script src="assets/js/popper.min.js"></script>
-        <script src="assets/js/bootstrap.min.js"></script>
-        <script src="assets/js/jquery.backstretch.min.js"></script>
-        <script src="assets/js/wow.min.js"></script>
-        <script src="assets/js/waypoints.min.js"></script>
-        <script src="assets/js/scripts.js"></script>
+		<script src="assets/js/jquery-3.5.1.min.js" defer></script>
+		<script src="assets/js/jquery-migrate-3.3.0.min.js" defer></script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous" defer></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous" defer></script>
+        <!--<script src="assets/js/popper.min.js"></script>
+        <script src="assets/js/bootstrap.min.js"></script>-->
+        <script src="assets/js/jquery.backstretch.min.js" defer></script>
+        <script src="assets/js/wow.min.js" defer></script>
+        <script src="assets/js/waypoints.min.js" defer></script>
+        <script src="assets/js/scripts.js" defer></script>
 
     </body>
 
