--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 							</ol>
 							<div class="carousel-inner">
 								<div class="carousel-item active">
-									<img src="assets/img/gallery/DSC01800.jpg" class="d-block w-100" alt="Image 1">
+									<img src="assets/img/gallery/DSC01800.jpg" class="d-block w-100" alt="Image 1" loading="lazy">
 								</div>
 								<div class="carousel-item">
 									<div class="embed-responsive embed-responsive-16by9">
@@ -239,10 +239,10 @@
 	       							</div>
 								</div>
 								<div class="carousel-item">
-									<img src="assets/img/gallery/DSC00425 copia.jpg" class="d-block w-100" alt="Image 2">
+									<img src="assets/img/gallery/DSC00425 copia.jpg" class="d-block w-100" alt="Image 2" loading="lazy">
 								</div>
 								<div class="carousel-item">
-									<img src="assets/img/gallery/DSC00708 copia.jpg" class="d-block w-100" alt="Image 3">
+									<img src="assets/img/gallery/DSC00708 copia.jpg" class="d-block w-100" alt="Image 3" loading="lazy">
 								</div>
 								<div class="carousel-item">
 									<div class="embed-responsive embed-responsive-16by9">
@@ -253,13 +253,13 @@
 	       							</div>
 								</div>
 								<div class="carousel-item">
-									<img src="assets/img/gallery/DSC02108.jpg" class="d-block w-100" alt="Image 4">
+									<img src="assets/img/gallery/DSC02108.jpg" class="d-block w-100" alt="Image 4" loading="lazy">
 								</div>
 								<div class="carousel-item">
 									<div class="embed-responsive embed-responsive-16by9">
 	       								<!--<iframe class="embed-responsive-item" src="https://drive.google.com/file/d/18aAGF043-3JENjqTX_h3VWO_w58Pt-kU/preview" width="640" height="480" allow="autoplay"></iframe>-->
 	       								<video controls>
-										  <source src="assets/img/gallery/video1.mp4" type="video/mp4">
+										  <source src="assets/img/gallery/video1.mp4" type="video/mp4"> 
 										</video>
 	       							</div>
 								</div>
@@ -272,22 +272,22 @@
 	       							</div>
 								</div>
 								<div class="carousel-item">
-									<img src="assets/img/gallery/DSC00817 copia.jpg" class="d-block w-100" alt="Image 5">
+									<img src="assets/img/gallery/DSC00817 copia.jpg" class="d-block w-100" alt="Image 5" loading="lazy">
 								</div>
 								<div class="carousel-item">
-									<img src="assets/img/gallery/DSC3608.jpeg" class="d-block w-100" alt="Image 6">
+									<img src="assets/img/gallery/DSC3608.jpeg" class="d-block w-100" alt="Image 6" loading="lazy">
 								</div>
 								<div class="carousel-item">
-									<img src="assets/img/gallery/7.jpg" class="d-block w-100" alt="Image 7">
+									<img src="assets/img/gallery/7.jpg" class="d-block w-100" alt="Image 7" loading="lazy">
 								</div>
 								<div class="carousel-item">
-									<img src="assets/img/gallery/IMG20220528133719.jpg" class="d-block w-100" alt="Image 8">
+									<img src="assets/img/gallery/IMG20220528133719.jpg" class="d-block w-100" alt="Image 8" loading="lazy">
 								</div>
 								<div class="carousel-item">
-									<img src="assets/img/gallery/DSC00961.jpg" class="d-block w-100" alt="Image 9">
+									<img src="assets/img/gallery/DSC00961.jpg" class="d-block w-100" alt="Image 9" loading="lazy">
 								</div>
 								<div class="carousel-item">
-									<img src="assets/img/gallery/DSC01170.jpg" class="d-block w-100" alt="Image 10">
+									<img src="assets/img/gallery/DSC01170.jpg" class="d-block w-100" alt="Image 10" loading="lazy">
 								</div>
 								<div class="carousel-item">
 									<div class="embed-responsive embed-responsive-16by9">
@@ -298,7 +298,7 @@
 	       							</div>
 								</div>
 								<div class="carousel-item">
-									<img src="assets/img/gallery/IMG_20220917_203146.jpg" class="d-block w-100" alt="Image 11">
+									<img src="assets/img/gallery/IMG_20220917_203146.jpg" class="d-block w-100" alt="Image 11" loading="lazy">
 								</div>
 							</div>
 							<a class="carousel-control-prev" onclick="document.querySelectorAll('video').forEach(vid => vid.pause());" href="#myCarousel" role="button" data-slide="prev">
