--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         
         <title>Integra Sport ASD</title>
 		<meta name="description" content="L'Associazione INTEGRA SPORT 2013 ASD si avvale della collaborazione di strutture del territorio romano per l'attivazione di corsi di CALCIO - BASKET rivolti a persone con e senza disabilità">
+        <meta name="keywords" content="Integra Sport, asd integra sport 2013, integra, ASD integra, disabilità, utilità sociale, sport, roma, Roma, Monterotondo">
+        <meta name="robots" content="all">
         <!-- CSS -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600" font-display="swap">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
